test.h

typedef long __time_t;
typedef long __syscall_slong_t;
typedef struct timespec {
  __time_t tv_sec;
  __syscall_slong_t tv_nsec;
} timespec;
typedef long __off_t;
typedef struct __locale_data {
  uint8_t _address;
} __locale_data;
typedef struct __locale_struct {
  struct __locale_data *__locales[13];
  const unsigned short *__ctype_b;
  const int *__ctype_tolower;
  const int *__ctype_toupper;
  const char *__names[13];
} __locale_struct;
typedef struct __locale_struct *__locale_t;
typedef __locale_t locale_t;
typedef unsigned long __dev_t;
typedef unsigned long __ino_t;
typedef unsigned long __nlink_t;
typedef unsigned int __mode_t;
typedef unsigned int __uid_t;
typedef unsigned int __gid_t;
typedef long __blksize_t;
typedef long __blkcnt_t;
typedef struct stat {
  __dev_t st_dev;
  __ino_t st_ino;
  __nlink_t st_nlink;
  __mode_t st_mode;
  __uid_t st_uid;
  __gid_t st_gid;
  int __pad0;
  __dev_t st_rdev;
  __off_t st_size;
  __blksize_t st_blksize;
  __blkcnt_t st_blocks;
  struct timespec st_atim;
  struct timespec st_mtim;
  struct timespec st_ctim;
  __syscall_slong_t __glibc_reserved[3];
} stat;
extern char *strcat(char *__dest, const char *__src);
extern char *strncat(char *__dest, const char *__src, unsigned long __n);
extern int strcmp(const char *__s1, const char *__s2);
extern int strncmp(const char *__s1, const char *__s2, unsigned long __n);
extern int strcoll(const char *__s1, const char *__s2);
extern unsigned long strxfrm(char *__dest, const char *__src,
                             unsigned long __n);
extern int strcoll_l(const char *__s1, const char *__s2, locale_t __l);
extern uintptr_t strxfrm_l(char *__dest, const char *__src, uintptr_t __n,
                           locale_t __l);
extern char *strdup(const char *__s);
extern char *strndup(const char *__string, unsigned long __n);
extern char *strchr(const char *__s, int __c);
extern char *strrchr(const char *__s, int __c);
extern char *strchrnul(const char *__s, int __c);
extern unsigned long strcspn(const char *__s, const char *__reject);
extern unsigned long strspn(const char *__s, const char *__accept);
extern char *strpbrk(const char *__s, const char *__accept);
extern char *strstr(const char *__haystack, const char *__needle);
extern char *strtok(char *__s, const char *__delim);
extern char *__strtok_r(char *__s, const char *__delim, char **__save_ptr);
extern char *strtok_r(char *__s, const char *__delim, char **__save_ptr);
extern char *strcasestr(const char *__haystack, const char *__needle);
extern void *memmem(const void *__haystack, uintptr_t __haystacklen,
                    const void *__needle, uintptr_t __needlelen);
extern void *__mempcpy(void *__dest, const void *__src, uintptr_t __n);
extern void *mempcpy(void *__dest, const void *__src, unsigned long __n);
extern unsigned long strlen(const char *__s);
extern uintptr_t strnlen(const char *__string, uintptr_t __maxlen);
extern char *strerror(int __errnum);
extern int strerror_r(int __errnum, char *__buf, uintptr_t __buflen);
extern char *strerror_l(int __errnum, locale_t __l);
extern int bcmp(const void *__s1, const void *__s2, unsigned long __n);
extern void bcopy(const void *__src, void *__dest, unsigned long __n);
extern void bzero(void *__s, unsigned long __n);
extern char *index(const char *__s, int __c);
extern char *rindex(const char *__s, int __c);
extern int ffs(int __i);
extern int ffsl(long __l);
extern int ffsll(long long __ll);
extern int strcasecmp(const char *__s1, const char *__s2);
extern int strncasecmp(const char *__s1, const char *__s2, unsigned long __n);
extern int strcasecmp_l(const char *__s1, const char *__s2, locale_t __loc);
extern int strncasecmp_l(const char *__s1, const char *__s2, uintptr_t __n,
                         locale_t __loc);
extern void explicit_bzero(void *__s, uintptr_t __n);
extern char *strsep(char **__stringp, const char *__delim);
extern char *strsignal(int __sig);
extern char *__stpcpy(char *__dest, const char *__src);
extern char *stpcpy(char *__dest, const char *__src);
extern char *__stpncpy(char *__dest, const char *__src, uintptr_t __n);
extern char *stpncpy(char *__dest, const char *__src, unsigned long __n);
extern unsigned long strlcpy(char *__dest, const char *__src,
                             unsigned long __n);
extern unsigned long strlcat(char *__dest, const char *__src,
                             unsigned long __n);
extern int stat(const char *__file, struct stat *__buf);
extern int fstat(int __fd, struct stat *__buf);
extern int fstatat(int __fd, const char *__file, struct stat *__buf,
                   int __flag);
extern int lstat(const char *__file, struct stat *__buf);
extern int chmod(const char *__file, __mode_t __mode);
extern int lchmod(const char *__file, __mode_t __mode);
extern int fchmod(int __fd, __mode_t __mode);
extern int fchmodat(int __fd, const char *__file, __mode_t __mode, int __flag);
extern __mode_t umask(__mode_t __mask);