src/GeoIP.rs

extern "C" {
    pub fn strcat(
        __dest: *mut ::std::ffi::c_char,
        __src: *const ::std::ffi::c_char,
    ) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn strncat(
        __dest: *mut ::std::ffi::c_char,
        __src: *const ::std::ffi::c_char,
        __n: ::std::ffi::c_ulong,
    ) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn strcmp(
        __s1: *const ::std::ffi::c_char,
        __s2: *const ::std::ffi::c_char,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn strncmp(
        __s1: *const ::std::ffi::c_char,
        __s2: *const ::std::ffi::c_char,
        __n: ::std::ffi::c_ulong,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn strcoll(
        __s1: *const ::std::ffi::c_char,
        __s2: *const ::std::ffi::c_char,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn strxfrm(
        __dest: *mut ::std::ffi::c_char,
        __src: *const ::std::ffi::c_char,
        __n: ::std::ffi::c_ulong,
    ) -> ::std::ffi::c_ulong;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __locale_struct {
    pub __locales: [*mut __locale_data; 13usize],
    pub __ctype_b: *const ::std::ffi::c_ushort,
    pub __ctype_tolower: *const ::std::ffi::c_int,
    pub __ctype_toupper: *const ::std::ffi::c_int,
    pub __names: [*const ::std::ffi::c_char; 13usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of __locale_struct"][::std::mem::size_of::<__locale_struct>() - 232usize];
    ["Alignment of __locale_struct"][::std::mem::align_of::<__locale_struct>() - 8usize];
    ["Offset of field: __locale_struct::__locales"]
        [::std::mem::offset_of!(__locale_struct, __locales) - 0usize];
    ["Offset of field: __locale_struct::__ctype_b"]
        [::std::mem::offset_of!(__locale_struct, __ctype_b) - 104usize];
    ["Offset of field: __locale_struct::__ctype_tolower"]
        [::std::mem::offset_of!(__locale_struct, __ctype_tolower) - 112usize];
    ["Offset of field: __locale_struct::__ctype_toupper"]
        [::std::mem::offset_of!(__locale_struct, __ctype_toupper) - 120usize];
    ["Offset of field: __locale_struct::__names"]
        [::std::mem::offset_of!(__locale_struct, __names) - 128usize];
};
pub type __locale_t = *mut __locale_struct;
pub type locale_t = __locale_t;
extern "C" {
    pub fn strcoll_l(
        __s1: *const ::std::ffi::c_char,
        __s2: *const ::std::ffi::c_char,
        __l: locale_t,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn strxfrm_l(
        __dest: *mut ::std::ffi::c_char,
        __src: *const ::std::ffi::c_char,
        __n: usize,
        __l: locale_t,
    ) -> usize;
}
extern "C" {
    pub fn strdup(__s: *const ::std::ffi::c_char) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn strndup(
        __string: *const ::std::ffi::c_char,
        __n: ::std::ffi::c_ulong,
    ) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn strchr(
        __s: *const ::std::ffi::c_char,
        __c: ::std::ffi::c_int,
    ) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn strrchr(
        __s: *const ::std::ffi::c_char,
        __c: ::std::ffi::c_int,
    ) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn strchrnul(
        __s: *const ::std::ffi::c_char,
        __c: ::std::ffi::c_int,
    ) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn strcspn(
        __s: *const ::std::ffi::c_char,
        __reject: *const ::std::ffi::c_char,
    ) -> ::std::ffi::c_ulong;
}
extern "C" {
    pub fn strspn(
        __s: *const ::std::ffi::c_char,
        __accept: *const ::std::ffi::c_char,
    ) -> ::std::ffi::c_ulong;
}
extern "C" {
    pub fn strpbrk(
        __s: *const ::std::ffi::c_char,
        __accept: *const ::std::ffi::c_char,
    ) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn strstr(
        __haystack: *const ::std::ffi::c_char,
        __needle: *const ::std::ffi::c_char,
    ) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn strtok(
        __s: *mut ::std::ffi::c_char,
        __delim: *const ::std::ffi::c_char,
    ) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn __strtok_r(
        __s: *mut ::std::ffi::c_char,
        __delim: *const ::std::ffi::c_char,
        __save_ptr: *mut *mut ::std::ffi::c_char,
    ) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn strtok_r(
        __s: *mut ::std::ffi::c_char,
        __delim: *const ::std::ffi::c_char,
        __save_ptr: *mut *mut ::std::ffi::c_char,
    ) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn strcasestr(
        __haystack: *const ::std::ffi::c_char,
        __needle: *const ::std::ffi::c_char,
    ) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn memmem(
        __haystack: *const ::std::ffi::c_void,
        __haystacklen: usize,
        __needle: *const ::std::ffi::c_void,
        __needlelen: usize,
    ) -> *mut ::std::ffi::c_void;
}
extern "C" {
    pub fn __mempcpy(
        __dest: *mut ::std::ffi::c_void,
        __src: *const ::std::ffi::c_void,
        __n: usize,
    ) -> *mut ::std::ffi::c_void;
}
extern "C" {
    pub fn mempcpy(
        __dest: *mut ::std::ffi::c_void,
        __src: *const ::std::ffi::c_void,
        __n: ::std::ffi::c_ulong,
    ) -> *mut ::std::ffi::c_void;
}
extern "C" {
    pub fn strlen(__s: *const ::std::ffi::c_char) -> ::std::ffi::c_ulong;
}
extern "C" {
    pub fn strnlen(__string: *const ::std::ffi::c_char, __maxlen: usize) -> usize;
}
extern "C" {
    pub fn strerror(__errnum: ::std::ffi::c_int) -> *mut ::std::ffi::c_char;
}
extern "C" {
    #[link_name = "\u{1}__xpg_strerror_r"]
    pub fn strerror_r(
        __errnum: ::std::ffi::c_int,
        __buf: *mut ::std::ffi::c_char,
        __buflen: usize,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn strerror_l(__errnum: ::std::ffi::c_int, __l: locale_t) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn bcmp(
        __s1: *const ::std::ffi::c_void,
        __s2: *const ::std::ffi::c_void,
        __n: ::std::ffi::c_ulong,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn bcopy(
        __src: *const ::std::ffi::c_void,
        __dest: *mut ::std::ffi::c_void,
        __n: ::std::ffi::c_ulong,
    );
}
extern "C" {
    pub fn bzero(__s: *mut ::std::ffi::c_void, __n: ::std::ffi::c_ulong);
}
extern "C" {
    pub fn index(__s: *const ::std::ffi::c_char, __c: ::std::ffi::c_int)
        -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn rindex(
        __s: *const ::std::ffi::c_char,
        __c: ::std::ffi::c_int,
    ) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn ffs(__i: ::std::ffi::c_int) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn ffsl(__l: ::std::ffi::c_long) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn ffsll(__ll: ::std::ffi::c_longlong) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn strcasecmp(
        __s1: *const ::std::ffi::c_char,
        __s2: *const ::std::ffi::c_char,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn strncasecmp(
        __s1: *const ::std::ffi::c_char,
        __s2: *const ::std::ffi::c_char,
        __n: ::std::ffi::c_ulong,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn strcasecmp_l(
        __s1: *const ::std::ffi::c_char,
        __s2: *const ::std::ffi::c_char,
        __loc: locale_t,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn strncasecmp_l(
        __s1: *const ::std::ffi::c_char,
        __s2: *const ::std::ffi::c_char,
        __n: usize,
        __loc: locale_t,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn explicit_bzero(__s: *mut ::std::ffi::c_void, __n: usize);
}
extern "C" {
    pub fn strsep(
        __stringp: *mut *mut ::std::ffi::c_char,
        __delim: *const ::std::ffi::c_char,
    ) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn strsignal(__sig: ::std::ffi::c_int) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn __stpcpy(
        __dest: *mut ::std::ffi::c_char,
        __src: *const ::std::ffi::c_char,
    ) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn stpcpy(
        __dest: *mut ::std::ffi::c_char,
        __src: *const ::std::ffi::c_char,
    ) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn __stpncpy(
        __dest: *mut ::std::ffi::c_char,
        __src: *const ::std::ffi::c_char,
        __n: usize,
    ) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn stpncpy(
        __dest: *mut ::std::ffi::c_char,
        __src: *const ::std::ffi::c_char,
        __n: ::std::ffi::c_ulong,
    ) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn strlcpy(
        __dest: *mut ::std::ffi::c_char,
        __src: *const ::std::ffi::c_char,
        __n: ::std::ffi::c_ulong,
    ) -> ::std::ffi::c_ulong;
}
extern "C" {
    pub fn strlcat(
        __dest: *mut ::std::ffi::c_char,
        __src: *const ::std::ffi::c_char,
        __n: ::std::ffi::c_ulong,
    ) -> ::std::ffi::c_ulong;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct stat {
    pub st_dev: __dev_t,
    pub st_ino: __ino_t,
    pub st_nlink: __nlink_t,
    pub st_mode: __mode_t,
    pub st_uid: __uid_t,
    pub st_gid: __gid_t,
    pub __pad0: ::std::ffi::c_int,
    pub st_rdev: __dev_t,
    pub st_size: __off_t,
    pub st_blksize: __blksize_t,
    pub st_blocks: __blkcnt_t,
    pub st_atim: timespec,
    pub st_mtim: timespec,
    pub st_ctim: timespec,
    pub __glibc_reserved: [__syscall_slong_t; 3usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of stat"][::std::mem::size_of::<stat>() - 144usize];
    ["Alignment of stat"][::std::mem::align_of::<stat>() - 8usize];
    ["Offset of field: stat::st_dev"][::std::mem::offset_of!(stat, st_dev) - 0usize];
    ["Offset of field: stat::st_ino"][::std::mem::offset_of!(stat, st_ino) - 8usize];
    ["Offset of field: stat::st_nlink"][::std::mem::offset_of!(stat, st_nlink) - 16usize];
    ["Offset of field: stat::st_mode"][::std::mem::offset_of!(stat, st_mode) - 24usize];
    ["Offset of field: stat::st_uid"][::std::mem::offset_of!(stat, st_uid) - 28usize];
    ["Offset of field: stat::st_gid"][::std::mem::offset_of!(stat, st_gid) - 32usize];
    ["Offset of field: stat::__pad0"][::std::mem::offset_of!(stat, __pad0) - 36usize];
    ["Offset of field: stat::st_rdev"][::std::mem::offset_of!(stat, st_rdev) - 40usize];
    ["Offset of field: stat::st_size"][::std::mem::offset_of!(stat, st_size) - 48usize];
    ["Offset of field: stat::st_blksize"][::std::mem::offset_of!(stat, st_blksize) - 56usize];
    ["Offset of field: stat::st_blocks"][::std::mem::offset_of!(stat, st_blocks) - 64usize];
    ["Offset of field: stat::st_atim"][::std::mem::offset_of!(stat, st_atim) - 72usize];
    ["Offset of field: stat::st_mtim"][::std::mem::offset_of!(stat, st_mtim) - 88usize];
    ["Offset of field: stat::st_ctim"][::std::mem::offset_of!(stat, st_ctim) - 104usize];
    ["Offset of field: stat::__glibc_reserved"]
        [::std::mem::offset_of!(stat, __glibc_reserved) - 120usize];
};
extern "C" {
    pub fn stat(__file: *const ::std::ffi::c_char, __buf: *mut stat) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn fstat(__fd: ::std::ffi::c_int, __buf: *mut stat) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn fstatat(
        __fd: ::std::ffi::c_int,
        __file: *const ::std::ffi::c_char,
        __buf: *mut stat,
        __flag: ::std::ffi::c_int,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn lstat(__file: *const ::std::ffi::c_char, __buf: *mut stat) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn chmod(__file: *const ::std::ffi::c_char, __mode: __mode_t) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn lchmod(__file: *const ::std::ffi::c_char, __mode: __mode_t) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn fchmod(__fd: ::std::ffi::c_int, __mode: __mode_t) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn fchmodat(
        __fd: ::std::ffi::c_int,
        __file: *const ::std::ffi::c_char,
        __mode: __mode_t,
        __flag: ::std::ffi::c_int,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn umask(__mask: __mode_t) -> __mode_t;
}
